--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.26",
     "angular-in-memory-web-api": "~0.3.0",
     "bootstrap": "^4.0.0-alpha.6",
+    "chart.js": "^2.6.0",
     "core-js": "^2.4.1",
     "rxjs": "5.0.1",
     "systemjs": "0.19.40",
