--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "description": "QuickStart package.json from the documentation, supplemented with testing support",
   "scripts": {
-    "build": "tsc -p src/",
+    "build": "gulp",
     "build:watch": "tsc -p src/ -w",
-    "build:e2e": "tsc -p e2e/",
+    "build:e2e": "gulp e2e",
     "serve": "lite-server -c=bs-config.json",
     "serve:e2e": "lite-server -c=bs-config.e2e.json",
     "prestart": "npm run build",
@@ -42,10 +42,16 @@
   },
   "devDependencies": {
     "@angular/cli": "^1.1.0",
+    "@types/core-js": "^0.9.41",
     "@types/jasmine": "2.5.36",
     "@types/node": "^6.0.46",
+    "browserify": "^14.4.0",
     "canonical-path": "0.0.2",
     "concurrently": "^3.2.0",
+    "gulp": "^3.9.1",
+    "gulp-sourcemaps": "^2.6.0",
+    "gulp-typescript": "^3.1.7",
+    "gulp-uglify": "^3.0.0",
     "jasmine-core": "~2.4.1",
     "karma": "^1.3.0",
     "karma-chrome-launcher": "^2.0.0",
@@ -56,8 +62,12 @@
     "lodash": "^4.16.4",
     "protractor": "~4.0.14",
     "rimraf": "^2.5.4",
+    "tsify": "^3.0.1",
     "tslint": "^3.15.1",
-    "typescript": "~2.1.0"
+    "typescript": "^2.2.2",
+    "typings": "^2.1.1",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0"
   },
   "repository": {}
 }
