--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "canonical-path": "0.0.2",
     "concurrently": "^3.2.0",
     "gulp": "^3.9.1",
+    "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.6.0",
     "gulp-typescript": "^3.1.7",
     "gulp-uglify": "^3.0.0",
