--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "serve": "lite-server -c=bs-config.json",
     "serve:e2e": "lite-server -c=bs-config.e2e.json",
     "prestart": "npm run build",
-    "start": "concurrently \"npm run build:watch\" \"npm run serve\"",
+    "start": "concurrently \"gulp sass:watch\" \"npm run build:watch\" \"npm run serve\"",
     "pree2e": "npm run build:e2e",
     "e2e": "concurrently \"npm run serve:e2e\" \"npm run protractor\" --kill-others --success first",
     "preprotractor": "webdriver-manager update",
@@ -35,8 +35,10 @@
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.26",
     "angular-in-memory-web-api": "~0.3.0",
     "bootstrap": "^4.0.0-alpha.6",
+    "bootstrap-grid": "^2.0.1",
     "chart.js": "^2.6.0",
     "core-js": "^2.4.1",
+    "ngx-bootstrap": "^1.7.1",
     "rxjs": "5.0.1",
     "systemjs": "0.19.40",
     "zone.js": "^0.8.4"
