--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "bootstrap-grid": "^2.0.1",
     "chart.js": "^2.6.0",
     "core-js": "^2.4.1",
+    "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^1.7.1",
     "rxjs": "5.0.1",
     "systemjs": "0.19.40",
