--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "angular-in-memory-web-api": "~0.3.0",
     "bootstrap": "^4.0.0-alpha.6",
     "bootstrap-grid": "^2.0.1",
+    "bricks.js": "^1.8.0",
     "chart.js": "^2.6.0",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
