--- a/package.json
+++ b/package.json
@@ -38,12 +38,13 @@
     "bootstrap-grid": "^2.0.1",
     "chart.js": "^2.6.0",
     "core-js": "^2.4.1",
-    "gulp": "^3.9.1",
     "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^1.7.1",
     "rxjs": "5.0.1",
     "systemjs": "0.19.40",
-    "zone.js": "^0.8.4",
+    "zone.js": "^0.8.4"
+  },
+  "devDependencies": {
     "@angular/cli": "^1.1.0",
     "@types/core-js": "^0.9.41",
     "@types/jasmine": "2.5.36",
@@ -51,6 +52,7 @@
     "browserify": "^14.4.0",
     "canonical-path": "0.0.2",
     "concurrently": "^3.2.0",
+    "gulp": "^3.9.1",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.6.0",
     "gulp-typescript": "^3.1.7",
@@ -71,8 +73,6 @@
     "typings": "^2.1.1",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
-  },
-  "devDependencies": {
   },
   "repository": {}
 }
