--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "QuickStart package.json from the documentation, supplemented with testing support",
   "scripts": {
+    "postinstall": "gulp default",
     "build": "gulp",
     "build:watch": "tsc -p src/ -w",
     "build:e2e": "gulp e2e",
