--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "description": "QuickStart package.json from the documentation, supplemented with testing support",
   "scripts": {
-    "build": "gulp",
-    "postinstall": "npm run serve",
+    "build": "npm run build:e2e",
+    "postinstall": "npm run serve:e2e",
     "build:watch": "tsc -p src/ -w",
     "build:e2e": "gulp e2e",
     "serve": "lite-server -c=bs-config.json",
