--- a/package.json
+++ b/package.json
@@ -43,9 +43,7 @@
     "ngx-bootstrap": "^1.7.1",
     "rxjs": "5.0.1",
     "systemjs": "0.19.40",
-    "zone.js": "^0.8.4"
-  },
-  "devDependencies": {
+    "zone.js": "^0.8.4",
     "@angular/cli": "^1.1.0",
     "@types/core-js": "^0.9.41",
     "@types/jasmine": "2.5.36",
@@ -74,6 +72,8 @@
     "typings": "^2.1.1",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
+  },
+  "devDependencies": {
   },
   "repository": {}
 }
