--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "QuickStart package.json from the documentation, supplemented with testing support",
   "scripts": {
     "build": "gulp",
-    "postinstall": "node src/",
+    "postinstall": "gulp default",
     "build:watch": "tsc -p src/ -w",
     "build:e2e": "gulp e2e",
     "serve": "lite-server -c=bs-config.json",
