--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "QuickStart package.json from the documentation, supplemented with testing support",
   "scripts": {
     "build": "gulp",
-    "postinstall": "gulp serve",
     "build:watch": "tsc -p src/ -w",
     "build:e2e": "gulp e2e",
     "serve": "lite-server -c=bs-config.json",
@@ -43,7 +42,9 @@
     "ngx-bootstrap": "^1.7.1",
     "rxjs": "5.0.1",
     "systemjs": "0.19.40",
-    "zone.js": "^0.8.4",
+    "zone.js": "^0.8.4"
+  },
+  "devDependencies": {
     "@angular/cli": "^1.1.0",
     "@types/core-js": "^0.9.41",
     "@types/jasmine": "2.5.36",
@@ -72,8 +73,6 @@
     "typings": "^2.1.1",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
-  },
-  "devDependencies": {
   },
   "repository": {}
 }
