--- a/bs-config.e2e.json
+++ b/bs-config.e2e.json
@@ -1,5 +1,14 @@
 {
-  "port": 8000,
-  "files": ["./src/**/*.{html,htm,css,js}"],
-  "server": { "baseDir": "./src" }
+  "open": false,
+  "logLevel": "silent",
+  "port": 8080,
+  "server": {
+    "baseDir": "src",
+    "routes": {
+      "/node_modules": "node_modules"
+    },
+    "middleware": {
+      "0": null
+    }
+  }
 }
