--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build:watch": "tsc -p src/ -w",
     "build:e2e": "gulp e2e",
     "serve": "lite-server -c=bs-config.json",
-    "serve:e2e": "node express.js",
+    "serve:e2e": "lite-server -c=bs-config.js",
     "prestart": "npm run build",
     "start": "concurrently \"gulp sass:watch\" \"npm run build:watch\" \"npm run serve\"",
     "pree2e": "npm run build:e2e",
