--- a/package.json
+++ b/package.json
@@ -34,12 +34,22 @@
     "@angular/router": "~4.0.0",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.26",
     "angular-in-memory-web-api": "~0.3.0",
+    "bcrypt-nodejs": "0.0.3",
+    "body-parser": "^1.17.0",
     "bootstrap": "^4.0.0-alpha.6",
     "bootstrap-grid": "^2.0.1",
     "chart.js": "^2.6.0",
     "core-js": "^2.4.1",
+    "crypto": "0.0.3",
+    "express": "^4.14.0",
     "font-awesome": "^4.7.0",
+    "jsonwebtoken": "^7.3.0",
+    "mongodb": "^2.2.24",
+    "mongoose": "^4.10.8",
     "ngx-bootstrap": "^1.7.1",
+    "passport": "^0.3.2",
+    "passport-jwt": "^2.2.1",
+    "passport-local": "^1.0.0",
     "rxjs": "5.0.1",
     "systemjs": "0.19.40",
     "zone.js": "^0.8.4"
