--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "serve": "lite-server -c=bs-config.json",
     "serve:e2e": "lite-server -c=bs-config.e2e.json",
     "prestart": "npm run build",
-    "start": "concurrently \"gulp sass:watch\" \"npm run build:watch\" \"npm run serve\"",
+    "start": "concurrently \"gulp sass:watch\" \"npm run build:watch\" \"npm run serve\" \"mongod && node server.js\"",
     "pree2e": "npm run build:e2e",
     "e2e": "concurrently \"npm run serve:e2e\" \"npm run protractor\" --kill-others --success first",
     "preprotractor": "webdriver-manager update",
@@ -18,7 +18,7 @@
     "test": "concurrently \"npm run build:watch\" \"karma start karma.conf.js\"",
     "pretest:once": "npm run build",
     "test:once": "karma start karma.conf.js --single-run",
-    "lint": "tslint ./src/**/*.ts -t verbose"
+    "lint": "tslint ./src/**/*.ts -t verbose --fix"
   },
   "keywords": [],
   "author": "",
