--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "serve": "lite-server -c=bs-config.json",
     "serve:e2e": "lite-server -c=bs-config.e2e.json",
     "prestart": "npm run build",
-    "start": "concurrently \"gulp sass:watch\" \"npm run build:watch\" \"npm run serve\" \"mongod && node server.js\"",
+    "start:win": "start mongod && ping 127.0.0.1 -n 6 > null && start node server.js && concurrently \"gulp sass:watch\" \"npm run build:watch\" \"npm run serve\"",
+    "start": "mongod & node server.js & concurrently \"gulp sass:watch\" \"npm run build:watch\" \"npm run serve\"",
     "pree2e": "npm run build:e2e",
     "e2e": "concurrently \"npm run serve:e2e\" \"npm run protractor\" --kill-others --success first",
     "preprotractor": "webdriver-manager update",
