--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
-  "name": "angular-quickstart",
+  "name": "cisco-dash",
   "version": "1.0.0",
-  "description": "QuickStart package.json from the documentation, supplemented with testing support",
+  "description": "Cisco Dash package.json from the documentation, supplemented with testing support",
   "scripts": {
     "build": "gulp",
-    "build:watch": "tsc -p src/ -w",
+    "build:watch": "gulp build:watch",
     "build:e2e": "gulp e2e",
     "serve": "lite-server -c=bs-config.json",
     "serve:e2e": "lite-server -c=bs-config.e2e.json",
     "prestart": "npm run build",
-    "start:win": "start mongod && ping 127.0.0.1 -n 6 > null && start node server.js && concurrently \"gulp sass:watch\" \"npm run build:watch\" \"npm run serve\"",
+    "start:win": "start mongod && ping 127.0.0.1 -n 6 > nul && start node server.js && concurrently \"gulp sass:watch\" \"npm run build:watch\" \"npm run serve\"",
     "start": "mongod & node server.js & concurrently \"gulp sass:watch\" \"npm run build:watch\" \"npm run serve\"",
     "pree2e": "npm run build:e2e",
     "e2e": "concurrently \"npm run serve:e2e\" \"npm run protractor\" --kill-others --success first",
     "preprotractor": "webdriver-manager update",
     "protractor": "protractor protractor.config.js",
     "pretest": "npm run build",
-    "test": "concurrently \"npm run build:watch\" \"karma start karma.conf.js\"",
+    "test": "start mongod && ping 127.0.0.1 -n 6 > null && start node server.js && concurrently \"npm run build:watch\" \"karma start karma.conf.js\"",
     "pretest:once": "npm run build",
     "test:once": "karma start karma.conf.js --single-run",
     "lint": "tslint ./src/**/*.ts -t verbose --fix"
