Rewrite gulp script with deployment in mind. Move all src to dist, and add a copy to /var/www/html task

--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "prestart": "npm run build",
     "start:win": "start mongod && ping 127.0.0.1 -n 6 > nul && start node server.js && concurrently \"gulp sass:watch\" \"npm run build:watch\" \"npm run serve\"",
     "start": "mongod & node server.js & concurrently \"gulp sass:watch\" \"npm run build:watch\" \"npm run serve\"",
+    "deploy:dev": "gulp deploy:dev",
+    "deploy:release": "gulp deploy:release",
     "pree2e": "npm run build:e2e",
     "e2e": "concurrently \"npm run serve:e2e\" \"npm run protractor\" --kill-others --success first",
     "preprotractor": "webdriver-manager update",
@@ -34,7 +36,6 @@
     "@angular/platform-browser-dynamic": "~4.0.0",
     "@angular/router": "~4.0.0",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.26",
-    "angular-in-memory-web-api": "~0.3.0",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.17.0",
     "bootstrap": "^4.0.0-alpha.6",
@@ -42,12 +43,12 @@
     "chart.js": "^2.6.0",
     "core-js": "^2.4.1",
     "crypto": "0.0.3",
+    "del": "^3.0.0",
     "express": "^4.14.0",
     "font-awesome": "^4.7.0",
     "jsonwebtoken": "^7.3.0",
     "mongodb": "^2.2.29",
     "mongoose": "^4.10.8",
-    "ngx-bootstrap": "^1.7.1",
     "passport": "^0.3.2",
     "passport-jwt": "^2.2.1",
     "passport-local": "^1.0.0",
@@ -56,16 +57,11 @@
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
-    "@angular/cli": "^1.1.0",
-    "@types/core-js": "^0.9.41",
-    "@types/jasmine": "2.5.36",
-    "@types/node": "^6.0.46",
-    "browserify": "^14.4.0",
     "canonical-path": "0.0.2",
     "concurrently": "^3.2.0",
     "gulp": "^3.9.1",
+    "gulp-clean": "^0.3.2",
     "gulp-sass": "^3.1.0",
-    "gulp-sourcemaps": "^2.6.0",
     "gulp-typescript": "^3.1.7",
     "gulp-uglify": "^3.0.0",
     "jasmine-core": "~2.4.1",
@@ -77,13 +73,8 @@
     "lite-server": "^2.2.2",
     "lodash": "^4.16.4",
     "protractor": "~4.0.14",
-    "rimraf": "^2.5.4",
-    "tsify": "^3.0.1",
     "tslint": "^3.15.1",
-    "typescript": "^2.2.2",
-    "typings": "^2.1.1",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0"
+    "typescript": "^2.2.2"
   },
   "repository": {}
 }
