--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
   "description": "Cisco Dash package.json from the documentation, supplemented with testing support",
   "scripts": {
     "build": "gulp",
-    "build:watch": "gulp build:watch",
+    "build:watch": "gulp devWatch",
     "build:e2e": "gulp e2e",
     "serve": "lite-server -c=bs-config.json",
     "serve:e2e": "lite-server -c=bs-config.e2e.json",
     "prestart": "npm run build",
-    "start:win": "start mongod && ping 127.0.0.1 -n 6 > nul && start node server.js && concurrently \"gulp sass:watch\" \"npm run build:watch\" \"npm run serve\"",
-    "start": "mongod & node server.js & concurrently \"gulp sass:watch\" \"npm run build:watch\" \"npm run serve\"",
-    "deploy:dev": "gulp deploy:dev",
-    "deploy:release": "gulp deploy:release",
+    "start:win": "start mongod && ping 127.0.0.1 -n 6 > nul && start node server.js && concurrently \"npm run build:watch\" \"npm run serve\"",
+    "start": "mongod & node server.js & concurrently \"npm run build:watch\" \"npm run serve\"",
+    "deploy:dev": "gulp deployDev",
+    "deploy:release": "gulp deployRelease",
     "pree2e": "npm run build:e2e",
     "e2e": "concurrently \"npm run serve:e2e\" \"npm run protractor\" --kill-others --success first",
     "preprotractor": "webdriver-manager update",
@@ -59,11 +59,13 @@
   "devDependencies": {
     "canonical-path": "0.0.2",
     "concurrently": "^3.2.0",
-    "gulp": "^3.9.1",
+    "gulp": "github:gulpjs/gulp#4.0",
     "gulp-clean": "^0.3.2",
+    "gulp-jsonminify": "^1.0.0",
     "gulp-sass": "^3.1.0",
     "gulp-typescript": "^3.1.7",
     "gulp-uglify": "^3.0.0",
+    "gulp-uglifycss": "^1.0.8",
     "jasmine-core": "~2.4.1",
     "karma": "^1.3.0",
     "karma-chrome-launcher": "^2.0.0",
@@ -73,6 +75,7 @@
     "lite-server": "^2.2.2",
     "lodash": "^4.16.4",
     "protractor": "~4.0.14",
+    "pump": "^1.0.2",
     "tslint": "^3.15.1",
     "typescript": "^2.2.2"
   },
