Clean up documentation and README files. add ping wait to start mongo script.

--- a/package.json
+++ b/package.json
@@ -3,15 +3,14 @@
   "version": "1.0.0",
   "description": "Cisco Dash package.json from the documentation, supplemented with testing support",
   "scripts": {
-    "build": "gulp",
+    "build": "gulp build",
     "build:watch": "gulp devWatch",
     "build:e2e": "gulp e2e",
     "serve": "lite-server -c=bs-config.json",
     "serve:e2e": "lite-server -c=bs-config.e2e.json",
     "prestart": "npm run build",
-    "start:win": "start mongod && ping 127.0.0.1 -n 6 > nul && start node server.js && concurrently \"npm run build:watch\" \"npm run serve\"",
-    "start": "mongod & node server.js & concurrently \"npm run build:watch\" \"npm run serve\"",
-    "deploy:dev": "gulp deployDev",
+    "start:win": "start-mongod.bat && start-server.bat && concurrently \"npm run build:watch\" \"npm run serve\"",
+    "start": "start-mongod.sh & start-server.sh & concurrently \"npm run build:watch\" \"npm run serve\"",
     "deploy:release": "gulp deployRelease",
     "pree2e": "npm run build:e2e",
     "e2e": "concurrently \"npm run serve:e2e\" \"npm run protractor\" --kill-others --success first",
