--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "serve": "lite-server -c=bs-config.json",
     "serve:e2e": "lite-server -c=bs-config.e2e.json",
     "prestart": "npm run build",
-    "start:win": "start-mongod.bat && start-server.bat && concurrently \"npm run build:watch\" \"npm run serve\"",
-    "start": "start-mongod.sh & start-server.sh & concurrently \"npm run build:watch\" \"npm run serve\"",
+    "start:win": "start-mongod.bat && start-server.bat && npm dev:win",
+    "dev:win":"concurrently \"npm run build:watch\" \"npm run serve\"",
+    "start": "start-mongod.sh & start-server.sh & npm run dev:nix",
+    "dev:nix": "concurrently \"npm run build:watch\" \"npm run serve\"",
     "deploy:release": "gulp deployRelease",
     "pree2e": "npm run build:e2e",
     "e2e": "concurrently \"npm run serve:e2e\" \"npm run protractor\" --kill-others --success first",
