Updating structure of dashboard so cards will scroll independently of the search menu.

--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "prestart": "npm run build",
     "start:win": "start-mongod.bat && start-server.bat && npm run dev:win",
     "start:nix": "start-mongod.sh & start-server.sh & npm run dev:nix",
-    "dev:win":"concurrently \"npm run build:watch\" \"npm run serve\"",
+    "dev:win": "concurrently \"npm run build:watch\" \"npm run serve\"",
     "dev:nix": "concurrently \"npm run build:watch\" \"npm run serve\"",
     "dist:full": "gulp fullDistro",
-    "dist:quick":"gulp quickDistro",
+    "dist:quick": "gulp quickDistro",
     "deploy:release": "gulp deployRelease",
     "pree2e": "npm run build:e2e",
     "e2e": "concurrently \"npm run serve:e2e\" \"npm run protractor\" --kill-others --success first",
@@ -50,6 +50,7 @@
     "express": "^4.14.0",
     "font-awesome": "^4.7.0",
     "jsonwebtoken": "^7.3.0",
+    "masonry-layout": "^4.2.0",
     "mongodb": "^2.2.29",
     "mongoose": "^4.10.8",
     "passport": "^0.3.2",
