Adding deploy scripts

--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-clean": "^0.3.2",
     "gulp-jsonminify": "^1.0.0",
+    "gulp-notify": "^3.0.0",
     "gulp-sass": "^3.1.0",
     "gulp-typescript": "^3.1.7",
     "gulp-uglify": "^3.0.0",
