--- a/package.json
+++ b/package.json
@@ -6,25 +6,20 @@
     "build": "gulp build",
     "build:watch": "gulp devWatch",
     "build:e2e": "gulp e2e",
-
     "serve": "lite-server -c=bs-config.json",
     "serve:e2e": "lite-server -c=bs-config.e2e.json",
-
     "prestart": "npm run build",
-
     "start:win": "start-mongod.bat && start-server.bat && npm run dev:win",
     "stop:win": "stop-mongod.bat && stop-server.bat",
     "dev:win": "concurrently \"npm run build:watch\" \"npm run serve\"",
     "deploy:win": "deploy.bat",
-
     "start:nix": "start-mongod.sh & start-server.sh & npm run dev:nix",
     "stop:nix": "stop-mongod.sh & stop-server.sh",
     "dev:nix": "concurrently \"npm run build:watch\" \"npm run serve\"",
     "deploy:nix": "./deploy.sh",
-    "clean:nix":"./clean.sh",
+    "clean:nix": "./clean.sh",
     "pree2e": "npm run build:e2e",
     "e2e": "concurrently \"npm run serve:e2e\" \"npm run protractor\" --kill-others --success first",
-
     "preprotractor": "webdriver-manager update",
     "protractor": "protractor protractor.config.js",
     "pretest": "npm run build",
@@ -70,6 +65,7 @@
   "devDependencies": {
     "canonical-path": "0.0.2",
     "concurrently": "^3.2.0",
+    "forever": "^0.15.3",
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-clean": "^0.3.2",
     "gulp-jsonminify": "^1.0.0",
@@ -86,6 +82,7 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "lite-server": "^2.2.2",
     "lodash": "^4.16.4",
+    "node-sass": "^4.5.3",
     "protractor": "~4.0.14",
     "pump": "^1.0.2",
     "tslint": "^3.15.1",
