Test and update deploy script on aws instance.

--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "stop:win": "stop-mongod.bat && stop-server.bat",
     "dev:win": "concurrently \"npm run build:watch\" \"npm run serve\"",
     "deploy:win": "deploy.bat",
-    "start:nix": "start-mongod.sh & start-server.sh & npm run dev:nix",
-    "stop:nix": "stop-mongod.sh & stop-server.sh",
+    "start:nix": "./start-mongod.sh & ./start-server.sh & npm run dev:nix",
+    "stop:nix": "./stop-mongod.sh & ./stop-server.sh",
     "dev:nix": "concurrently \"npm run build:watch\" \"npm run serve\"",
     "deploy:nix": "./deploy.sh",
     "clean:nix": "./clean.sh",
